# extractderoulepedagogique

./: .gitignore  Dockerfile  README.adoc  action.yaml  pyproject.toml
.github/workflows/: build-image.yml
extractderoulepedagogique/: main.py
